--- a/src/app/Ui/Modules/Carga_Inventario/Page/registro-producto-new-inventario/registro-producto-new-inventario.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/registro-producto-new-inventario/registro-producto-new-inventario.component.html
@@ -10,7 +10,7 @@
           <div class="text-center">
             <h3
               id="hs-ai-modal-label"
-              class="text-lg font-semibold text-gray-800 dark:text-neutral-200"
+              class="text-lg font-semibold text-gray-800 "
             >
               REGISTRAR PRODUCTO NUEVO INVENTARIO
             </h3>
@@ -28,7 +28,7 @@
                 >Fecha Creación:</span
               >
               <span
-                class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                class="block text-sm font-medium text-gray-800 "
                 >05/12/2024</span
               >
             </div>
@@ -39,7 +39,7 @@
                 >Estado:</span
               >
               <span
-                class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                class="block text-sm font-medium text-gray-800 "
                 >Activo</span
               >
             </div>
@@ -50,7 +50,7 @@
                 >Ruc Empresa:</span
               >
               <span
-                class="block text-sm font-medium text-gray-800 dark:text-neutral-200"
+                class="block text-sm font-medium text-gray-800 "
                 >10733567363</span
               >
             </div>
@@ -62,7 +62,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -70,7 +70,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -78,7 +78,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 ''"
               >
                 sucursal
               </label>
@@ -86,7 +86,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -94,7 +94,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -102,7 +102,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -110,7 +110,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -118,73 +118,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Ingresar nombre"
-              />
-            </div>
-          </div>
-
-          <div class="flex-1">
-            <div class="Almacen_Inventario mt-2">
-              <label
-                for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
-              >
-                Almacén
-              </label>
-              <input
-                formControlName="descripcion"
-                id="af-submit-project-url"
-                type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Ingresar nombre"
-              />
-            </div>
-
-            <div class="Almacen_Inventario mt-2">
-              <label
-                for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
-              >
-                Almacén
-              </label>
-              <input
-                formControlName="descripcion"
-                id="af-submit-project-url"
-                type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Ingresar nombre"
-              />
-            </div>
-
-            <div class="Almacen_Inventario mt-2">
-              <label
-                for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
-              >
-                Almacén
-              </label>
-              <input
-                formControlName="descripcion"
-                id="af-submit-project-url"
-                type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
-                placeholder="Ingresar nombre"
-              />
-            </div>
-
-            <div class="Almacen_Inventario mt-2">
-              <label
-                for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
-              >
-                Almacén
-              </label>
-              <input
-                formControlName="descripcion"
-                id="af-submit-project-url"
-                type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -194,7 +128,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -202,7 +136,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -210,7 +144,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -218,7 +152,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -226,7 +160,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -234,7 +168,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -242,7 +176,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -250,7 +184,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -260,7 +194,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -268,7 +202,7 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -276,7 +210,7 @@
             <div class="Almacen_Inventario mt-2">
               <label
                 for="af-submit-project-url"
-                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
               >
                 Almacén
               </label>
@@ -284,7 +218,73 @@
                 formControlName="descripcion"
                 id="af-submit-project-url"
                 type="text"
-                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
+                placeholder="Ingresar nombre"
+              />
+            </div>
+          </div>
+
+          <div class="flex-1">
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
+                placeholder="Ingresar nombre"
+              />
+            </div>
+
+            <div class="Almacen_Inventario mt-2">
+              <label
+                for="af-submit-project-url"
+                class="inline-block text-left w-full text-sm font-medium text-gray-800 mt-2.5 "
+              >
+                Almacén
+              </label>
+              <input
+                formControlName="descripcion"
+                id="af-submit-project-url"
+                type="text"
+                class="py-2 px-3 pe-11 border block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar nombre"
               />
             </div>
@@ -302,7 +302,7 @@
         </button>
         <button
           type="submit"
-          class="py-2.5 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-ring-blue-500 text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 dark:bg-transparent"
+          class="py-2.5 px-4 w-full inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-ring-blue-500 text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:bg-gray-50 "
         >
           Guardar
         </button>
