--- a/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
+++ b/src/app/Ui/Modules/Asignaciones/components/tabla-inventarios-asignados/tabla-inventarios-asignados.component.html
@@ -90,8 +90,8 @@
   class="px-6 py-4 grid gap-3 md:flex md:justify-between md:items-center border-t border-gray-200 dark:border-neutral-700"
 >
   <div>
-    <p class="text-sm text-gray-600 dark:text-neutral-400">
-      <span class="font-semibold text-gray-800 dark:text-neutral-200">{{
+    <p class="text-sm text-gray-600 ">
+      <span class="font-semibold text-gray-800 ">{{
         mensajeCantidad
       }}</span>
     </p>
